test/regression/sema/valid/local_runtime_init.tc
int inc(int x) {
    return x + 1;
}

int main() {
    int a = inc(3);
    return a;
}
