test/regression/sema/invalid/global_runtime_init.tc
int id(int x) {
    return x;
}

int g = id(1);

int main() {
    return g;
}
